k8s/monitoring/alertmanager.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      name: alertmanager
      labels:
        app: alertmanager
    spec:
      priorityClassName: monitoring-priority
      containers:
      - name: alertmanager
        image: prom/alertmanager:latest
        args:
          - "--config.file=/etc/alertmanager/config.yml"
          - "--storage.path=/alertmanager"
          - "--log.level=debug"
        ports:
        - name: alertmanager
          containerPort: 9093
        volumeMounts:
        - name: config-volume
          mountPath: /etc/alertmanager
        - name: templates-volume
          mountPath: /etc/alertmanager-templates
        - name: alertmanager
          mountPath: /alertmanager
      volumes:
      - name: config-volume
        configMap:
          name: alertmanager-config
      - name: templates-volume
        configMap:
          name: alertmanager-templates
      - name: alertmanager
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-discord
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager-discord
  template:
    metadata:
      name: alertmanager-discord
      labels:
        app: alertmanager-discord
    spec:
      priorityClassName: monitoring-priority
      containers:
      - name: alertmanager-discord
        image: gcr.io/prysmaticlabs/alertmanager-discord:latest
        ports:
        - name: webhook
          containerPort: 9094
