k8s/monitoring/alertmanager.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: istio-system
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path: /
      prometheus.io/port: '8080'
spec:
  selector: 
    app: alertmanager
  type: ClusterIP
  ports:
    - port: 9093
      targetPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-discord
  namespace: istio-system
spec:
  selector: 
    app: alertmanager-discord
  type: ClusterIP 
  ports:
    - port: 9094
      targetPort: 9094
