k8s/monitoring/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.prylabs.network
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager
          servicePort: 9093
  - host: grafana.prylabs.network
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
  - host: prometheus.prylabs.network
    http:
     paths:
     - path: /
       backend:
         serviceName: prometheus 
         servicePort: 9090
