k8s/monitoring/jaeger-collector.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-collector-virtual-service
  namespace: istio-system
spec:
  hosts:
    - jaeger-collector.istio-system.svc.cluster.local
  gateways:
    - mesh
  http:
    - match:
        - port: 14268
      route:
        - destination:
            host: jaeger-collector.istio-system.svc.cluster.local
            port:
              number: 14268
